--- a/_config.yml
+++ b/_config.yml
@@ -14,8 +14,29 @@ description: > # this means to ignore newlines until "baseurl:"
   Google search results) and in your feed.xml site description.
 baseurl: "/microcast" # the subpath of your site, e.g. /blog
 url: "http://yourdomain.com" # the base hostname & protocol for your site
-twitter_username: jekyllrb
-github_username:  jekyll
+twitter_username: LK64076007A
+github_username:  LK64076007A  
+
+# Add this section to your _config.yml
+# You may ignore information you already have
+# like title, url and such
+#####################################
+
+# Podcast Feed Settings
+
+title:          your-site-title
+email:          your-podcast-contact-email
+description:    "A short form podcast hosted completely Github."
+subtitle:       "Size isn't everything"
+url:            /
+lang:           en-us
+author:         Michael
+copyright:      "&#x2117; &amp; &#xA9; 2016"
+
+
+# Outputting
+permalink: /:title/
 
 # Build settings
 markdown: kramdown
+timezone: America/New_York
