more small fixes

--- a/_config.yml
+++ b/_config.yml
@@ -26,7 +26,7 @@ github_username:  LK64076007A
 
 title:          Microcast
 email:          your-podcast-contact-email
-description:    "A short form podcast hosted completely Github."
+description:    "A short form podcast hosted completely on Github."
 subtitle:       "Size isn't everything"
 lang:           en-us
 author:         Michael
