--- a/_config.yml
+++ b/_config.yml
@@ -6,8 +6,6 @@
 # 'jekyll serve'. If you change this file, please restart the server process.
 
 # Site settings
-title: Your awesome title
-email: your-email@domain.com
 description: > # this means to ignore newlines until "baseurl:"
   Write an awesome description for your new site here. You can edit this
   line in _config.yml. It will appear in your document head meta (for
@@ -24,7 +22,7 @@ github_username:  LK64076007A
 
 # Podcast Feed Settings
 
-title:          Microcast
+title:          Driftwood
 email:          your-podcast-contact-email
 description:    "A short form podcast hosted completely on Github."
 subtitle:       "Size isn't everything"
