--- a/_config.yml
+++ b/_config.yml
@@ -2,18 +2,12 @@
 # 'jekyll serve'. If you change this file, please restart the server process.
 
 # Site settings
-baseurl: "/microcast" # the subpath of your site, e.g. /blog
-url: "http://soitscometothis.net" # the base hostname & protocol for your site
+baseurl: "" # the subpath of your site, e.g. /blog
+url: "http://soitscometothis.net/microcast" # the base hostname & protocol for your site
 twitter_username: LK64076007A
 github_username:  LK64076007A  
 
-# Add this section to your _config.yml
-# You may ignore information you already have
-# like title, url and such
-#####################################
-
 # Podcast Feed Settings
-
 title:          Driftwood
 email:          your-podcast-contact-email
 description:    "A short form podcast hosted completely on Github."
@@ -29,3 +23,35 @@ permalink: /:title/
 # Build settings
 markdown: kramdown
 timezone: America/New_York
+
+# Basic
+name:               "Drift"
+
+# Markdown
+markdown:           rdiscount
+
+# Navigation
+nav:
+  - name:           "About"
+    href:           "/about"
+  - name:           "Subscribe"
+    href:           "/podcast.rss"
+
+# Sass
+sass:
+  style:            :compressed
+
+# Scopes
+defaults:
+  -
+    scope:
+      path:         ""
+      type:         "pages"
+    values:
+      layout:       "page"
+  -
+    scope:
+      path:         ""
+      type:         "posts"
+    values:
+      layout:       "post"
