--- a/_config.yml
+++ b/_config.yml
@@ -2,8 +2,8 @@
 # 'jekyll serve'. If you change this file, please restart the server process.
 
 # Site settings
-baseurl: "" # the subpath of your site, e.g. /blog
-url: "http://soitscometothis.net/microcast" # the base hostname & protocol for your site
+baseurl: "/microcast" # the subpath of your site, e.g. /blog
+url: "http://soitscometothis.net" # the base hostname & protocol for your site
 twitter_username: LK64076007A
 github_username:  LK64076007A  
 
@@ -33,9 +33,9 @@ markdown:           rdiscount
 # Navigation
 nav:
   - name:           "About"
-    href:           "/about"
+    href:           "/microcast/about"
   - name:           "Subscribe"
-    href:           "/podcast.rss"
+    href:           "/microcast/podcast.rss"
 
 # Sass
 sass:
