More fine tuning
removed icons not needed for this theme, updated about page, and
changed name design

--- a/_config.yml
+++ b/_config.yml
@@ -25,7 +25,7 @@ markdown: kramdown
 timezone: America/New_York
 
 # Basic
-name:               "Drift"
+name:               "Driftwood"
 
 # Markdown
 markdown:           rdiscount
